--- a/src/layouts/layout-styles.scss
+++ b/src/layouts/layout-styles.scss
@@ -55,6 +55,10 @@ body:is(.tabs-floating, .tabs-floating-center) {
   &:is(.layout-classic, .layout-frame) .mod-root .workspace-tab-header {
     --tab-outline-width: 1px !important;
   }
+  &:is(.layout-cupertino, .layout-macos):not(.is-mobile) .mod-root .workspace-tab-header {
+    height: 32px;
+    margin: auto 0;
+  }
 }
 
 body:is(.layout-classic, .layout-minimal, .layout-frame),
